--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,14 @@
-// Начните писать стили здесь
+@import "variables.less";
+@import "fonts.less";
+@import "global.less";
+@import "blocks/container.less";
+@import "blocks/page.less";
+@import "blocks/page-header.less";
+@import "blocks/visually-hidden.less";
+@import "blocks/main-nav.less";
+@import "blocks/main.less";
+@import "blocks/benefits.less";
+@import "blocks/reviews.less";
+@import "blocks/price.less";
+@import "blocks/feedback.less";
+@import "blocks/footer.less";
