Базовая стилизация формы

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -12,3 +12,5 @@
 @import "blocks/price.less";
 @import "blocks/feedback.less";
 @import "blocks/footer.less";
+@import "blocks/main-form.less";
+@import "blocks/form.less";
