--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,5 +1,8 @@
 .page-header {
   background-color: @blue;
+  background-image: url(../../img/back-mobile.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 .page-header__slogan {
@@ -7,6 +10,7 @@
   line-height: 29px;
   color: @white;
   font-weight: 300;
+  text-transform: uppercase;
 }
 
 .page-header__download-button {
@@ -17,25 +21,19 @@
   text-decoration-line: none;
 }
 
-.page-header__social {
-
-}
-
-.page-header__social-apple {
-
-}
-
-.page-header__social-android {
-
-}
-
-.page-header__social-windows {
-
-}
-
 .page-header__social-text {
   font-size: 14px;
   font-weight: 300;
   line-height: 24px;
+  color: @white;
+}
+
+
+/* form.html */
+
+.page-header__intro-heading {
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 33px;
   color: @white;
 }
