--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,3 +1,7 @@
+.form__worksheep {
+  border: none;
+}
+
 .form__worksheep-label {
   color: @red;
   text-transform: uppercase;
@@ -17,6 +21,7 @@
 
 .form__achievements {
   background-color: @grey;
+  border: none;
 }
 
 .form__achievements-legend {
@@ -34,6 +39,10 @@
   font-weight: 400;
   line-height: 30px;
   color: @blue;
+}
+
+.form__feedback {
+  border: none;
 }
 
 .form__feedback-label {
@@ -55,6 +64,7 @@
 
 .form__about-app {
   background-color: @grey;
+  border: none;
 }
 
 .form__about-app-legend {
@@ -72,6 +82,10 @@
   font-style: normal;
   font-weight: 400;
   line-height: 30px;
+}
+
+.form__emotion {
+  border: none;
 }
 
 .form__emotion-legend {
