--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,8 +1,19 @@
 .page-header {
   background-color: @blue;
-  background-image: url(../../img/back-mobile.jpg);
-  background-repeat: no-repeat;
-  background-size: 100%;
+}
+
+.page-header__main-inform {
+  position: relative;
+}
+
+.page-header__head {
+  background-color: rgba(@black, 0.3);
+    &--over {
+      position: absolute;
+      left: 0;
+      right: 0;
+      padding: 22px 20px;
+    }
 }
 
 .page-header__slogan {
@@ -10,7 +21,18 @@
   line-height: 29px;
   color: @white;
   font-weight: 300;
-  text-transform: uppercase;
+  background-image: url(../../img/hend.png), url(../../img/back-mobile.jpg);
+  background-repeat: no-repeat;
+  background-size: 320px 286px, cover;
+  background-position: left bottom, 0 0;
+  min-height: 396px;
+    &--big {
+      padding-top: 95px;
+    }
+}
+
+.page-header__slogan-text {
+  margin-top: 0;
 }
 
 .page-header__download-button {
@@ -31,9 +53,18 @@
 
 /* form.html */
 
+.page-header__intro {
+  background-image: url(../../img/back-mobile.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .page-header__intro-heading {
   font-size: 24px;
   font-weight: 300;
   line-height: 33px;
   color: @white;
+  margin: 0;
+  padding: 102px 26px 51px 26px;
+  text-align: center;
 }
