--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,5 +1,7 @@
 .form__worksheep {
   border: none;
+  padding: 0;
+  margin: 0;
 }
 
 .form__worksheep-label {
@@ -22,6 +24,8 @@
 .form__achievements {
   background-color: @grey;
   border: none;
+  padding: 0;
+  margin: 0;
 }
 
 .form__achievements-legend {
@@ -43,6 +47,8 @@
 
 .form__feedback {
   border: none;
+  padding: 0;
+  margin: 0;
 }
 
 .form__feedback-label {
@@ -65,6 +71,8 @@
 .form__about-app {
   background-color: @grey;
   border: none;
+  padding: 0;
+  margin: 0;
 }
 
 .form__about-app-legend {
@@ -86,6 +94,8 @@
 
 .form__emotion {
   border: none;
+  padding: 0;
+  margin: 0;
 }
 
 .form__emotion-legend {
