--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -4,16 +4,14 @@
 
 .page-header__main-inform {
   position: relative;
+  background-image: url(../../img/back-mobile.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .page-header__head {
   background-color: rgba(@black, 0.3);
-    &--over {
-      position: absolute;
-      left: 0;
-      right: 0;
-      padding: 22px 20px;
-    }
+  padding: 22px 0;
 }
 
 .page-header__slogan {
@@ -21,14 +19,11 @@
   line-height: 29px;
   color: @white;
   font-weight: 300;
-  background-image: url(../../img/hend.png), url(../../img/back-mobile.jpg);
+  background-image: url(../../img/hend.png);
   background-repeat: no-repeat;
-  background-size: 320px 286px, cover;
-  background-position: left bottom, 0 0;
+  background-size: 320px 286px;
+  background-position: left bottom;
   min-height: 396px;
-    &--big {
-      padding-top: 95px;
-    }
 }
 
 .page-header__slogan-text {
@@ -53,18 +48,12 @@
 
 /* form.html */
 
-.page-header__intro {
-  background-image: url(../../img/back-mobile.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 .page-header__intro-heading {
   font-size: 24px;
   font-weight: 300;
   line-height: 33px;
   color: @white;
   margin: 0;
-  padding: 102px 26px 51px 26px;
+  padding: 36px 0 51px 0;
   text-align: center;
 }
