--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,3 +14,6 @@
 @import "blocks/footer.less";
 @import "blocks/main-form.less";
 @import "blocks/form.less";
+@import "blocks/main-picture.less";
+@import "blocks/other-picture.less";
+@import "blocks/main-filter.less";
