--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -2,16 +2,18 @@
   background-color: @blue;
 }
 
-.page-header__main-inform {
-  position: relative;
-  background-image: url(../../img/back-mobile.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+.page-header__head {
+  background-color: @black;
+  opacity: 0.3;
+  padding: 22px 0;
 }
 
-.page-header__head {
-  background-color: rgba(@black, 0.3);
-  padding: 22px 0;
+.page-header__slogan-phone {
+  background-image: url("../../img/hend.png");
+  background-size: 320px 286px;
+  min-height: 396px;
+  background-position: left bottom;
+  background-repeat: no-repeat;
 }
 
 .page-header__slogan {
@@ -19,15 +21,15 @@
   line-height: 29px;
   color: @white;
   font-weight: 300;
-  background-image: url(../../img/hend.png);
+  background-image: url("../../img/back-mobile.jpg");
   background-repeat: no-repeat;
-  background-size: 320px 286px;
-  background-position: left bottom;
-  min-height: 396px;
+  background-size: cover;
+  background-position: center center;
 }
 
 .page-header__slogan-text {
-  margin-top: 0;
+  margin: 0;
+  padding: 36px 0;
 }
 
 .page-header__download-button {
