--- a/source/less/blocks/main-picture.less
+++ b/source/less/blocks/main-picture.less
@@ -10,6 +10,7 @@
   line-height: 24px;
   padding: 13px 20px 14px 19px;
   background-color: @red;
+  text-transform: uppercase;
 }
 
 .main-picture__information {
