--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -2,16 +2,36 @@
   background-color: @white;
 }
 
+.feedback .container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 .feedback__text {
   font-size: 24px;
   font-weight: 300;
   line-height: 29px;
   color: @blue;
+  text-align: center;
 }
 
 .feedback__list {
   list-style: none;
+  display: flex;
+  flex-direction: column;
   padding: 0;
+  @media (min-width: 660px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+
+.feedback__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .feedback__item-text {
@@ -24,4 +44,18 @@
 .feedback__link {
   text-decoration: none;
   color: red;
+}
+
+.feedback__map {
+  position: relative;
+}
+
+.feedback__top-img {
+  background-image: url("../../img/white-back.svg");
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: 1439px 123px;
+  height: 123px;
+  width: 100%;
+  position: absolute;
 }
