--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -1,36 +1,119 @@
 .price {
-  background-color: @grey;
+  background-color: @white;
+  background-image: url("../../img/grey-back.png");
+  background-repeat: no-repeat;
+  background-position: 0 5%;
+  background-size: cover;
+  overflow-x: hidden;
+  position: relative;
+  min-height: 534px;
 }
 
-.price__list {
-  list-style: none;
+.price__wraper {
+  display: flex;
+  flex-direction: column;
+  max-width: 940px;
+  margin: 0 auto;
+  margin-top: 154px;
+  @media (min-width: 660px) and (max-width: 939px) {
+    max-width: 660px;
+  }
+  @media (min-width: 320px) and (max-width: 659px) {
+    position: absolute;
+    width: 840px;
+    overflow-x: hidden;
+    transform: translateX(-258px);
+  }
+}
+
+.price__table {
+  table-layout: auto;
+}
+
+.price__head {
+  position: relative;
+  width: 233px;
+  height: 95px;
+  text-transform: uppercase;
   padding: 0;
+  background-color: @blue;
+  color: @white;
+  @media (min-width: 660px) and (max-width: 939px) {
+    width: 152px;
+  }
+}
+
+.price__option-text{
+  padding-left: 20px;
+  @media (min-width: 320px) and (max-width: 659px) {
+    display: none;
+  }
+}
+
+.price_head-hidden {
+  @media (min-width: 320px) and (max-width: 659px) {
+    display: none;
+  }
+}
+
+.price__text {
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 30px;
+  padding: 8px 0 18px 0;
   margin: 0;
 }
 
-.price__item-header {
-  background-color: @blue;
+.price__head:first-child {
+  background-color: @grey;
 }
 
-.price__item-header p {
+.price__hit {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.price__heading {
+  margin: 0;
+  padding: 9px 0 0 0;
   font-size: 18px;
-  font-weight: 300;
-  line-height: 30px;
-  color: @white;
-  text-transform: uppercase;
-}
-
-.price__item {
-  background-color: @white;
-  border: 1px solid @grey;
-  text-transform: uppercase;
-  color: @blue;
-}
-
-.price__tarif {
-  text-transform: uppercase;
-  color: @white;
-  font-size: 16px;
+  font-style: normal;
   font-weight: 700;
   line-height: 30px;
+}
+
+.price__option {
+  width: 234px;
+  height: 59px;
+  color: @blue;
+  border-collapse: collapse;
+  border: 1px solid @grey;
+  background-color: @white;
+  padding-left: 20px;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  @media (min-width: 660px) and (max-width: 939px) {
+    width: 152px;
+    font-size: 14px;
+  }
+}
+
+.price__option-check {
+  margin-left: 81px;
+  margin-top: 5px;
+  @media (min-width: 660px) and (max-width: 939px) {
+    margin-left: 45px;
+    margin-top: 10px;
+  }
+}
+
+.price__span-mob {
+  display: none;
+  @media (min-width: 320px) and (max-width: 659px) {
+    display: block;
+  }
 }
