--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -1,9 +1,16 @@
 .reviews {
   background-color: @white;
+  @media (min-width: 940px) {
+    background-image: url("../../img/quotes.png");
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+  }
 }
 
 .reviews__list {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .reviews__item-heading {
@@ -11,6 +18,27 @@
   font-size: 18px;
   font-weight: 700;
   line-height: 30px;
+  @media (min-width: 660px) {
+    order: 2;
+  }
+}
+
+.reviews__item {
+  display: none;
+  align-items: center;
+  flex-direction: column;
+}
+
+.reviews__item--active {
+  display: flex;
+}
+
+.reviews__about-autor {
+  display: none;
+  @media (min-width: 660px) {
+    display: block;
+    order: 3;
+  }
 }
 
 .reviews__item-text {
@@ -18,4 +46,5 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 30px;
+  text-align: center;
 }
