--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,6 +8,7 @@
 @import "blocks/main-nav.less";
 @import "blocks/main.less";
 @import "blocks/benefits.less";
+@import "blocks/fake-inform.less";
 @import "blocks/reviews.less";
 @import "blocks/price.less";
 @import "blocks/feedback.less";
