--- a/source/less/blocks/benefits.less
+++ b/source/less/blocks/benefits.less
@@ -1,5 +1,5 @@
 .benefits__main-features {
-  background-image: url("../../img/phone-main.png"), url("../../img/grey-back.png");
+  background-image: url("../img/phone-main.png"), url("../img/grey-back.png");
   background-repeat: no-repeat;
   background-position: 50% 110%, 0 10%;
   padding-top: 86px;
