--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,7 +1,39 @@
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  @media (min-width: 940px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+
 .form__worksheep {
   border: none;
   padding: 0;
   margin: 0;
+}
+
+.form__worksheep-flex {
+  display: flex;
+  align-items: left;
+  flex-direction: column;
+
+  @media (min-width: 660px) {
+    flex-direction: row;
+    align-items: center;
+  }
+}
+
+.form__worksheep-position {
+  order: 0;
+
+  @media (min-width: 940px) {
+    width: 100%;
+    max-width: 432px;
+  }
 }
 
 .form__worksheep-label {
@@ -11,6 +43,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 30px;
+  margin-right: 20px;
 }
 
 .form__worksheep-input {
@@ -19,13 +52,38 @@
   font-weight: 400;
   line-height: 30px;
   color: @blue;
+  width: 100%;
+  min-width: 280px;
+
+  @media (min-width: 940px) {
+    max-width: 561px;
+  }
 }
 
 .form__achievements {
-  background-color: @grey;
+  display: flex;
+  flex-direction: column;
   border: none;
   padding: 0;
   margin: 0;
+
+  @media (min-width: 660px) {
+    border: 2px solid @grey;
+  }
+}
+
+.form__achievements-position {
+  order: 1;
+  background-color: @grey;
+
+  @media (min-width: 660px) {
+    order: 3;
+    background-color: @white;
+  }
+
+  @media (min-width: 940px) {
+    width: 100%;
+  }
 }
 
 .form__achievements-legend {
@@ -35,6 +93,7 @@
   font-weight: 400;
   line-height: 18px;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .form__achievements-label {
@@ -47,8 +106,40 @@
 
 .form__feedback {
   border: none;
+  flex-direction: column;
+  display: flex;
   padding: 0;
   margin: 0;
+
+  @media (min-width: 660px) {
+    border: 2px solid @grey;
+  }
+}
+
+.form__feedback-position {
+  order: 2;
+
+  @media (min-width: 660px) {
+    order: 2;
+  }
+
+  @media (min-width: 940px) {
+    width: 100%;
+  }
+}
+
+.form__feedback-legend {
+  display: none;
+
+  @media (min-width: 660px) {
+    display: block;
+    text-align: center;
+    color: @red;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+  }
 }
 
 .form__feedback-label {
@@ -69,10 +160,30 @@
 }
 
 .form__about-app {
-  background-color: @grey;
+  display: flex;
+  flex-direction: column;
   border: none;
   padding: 0;
   margin: 0;
+
+  @media (min-width: 660px) {
+    border: 2px solid @grey;
+  }
+}
+
+.form__about-app-position {
+  order: 3;
+  background-color: @grey;
+
+  @media (min-width: 660px) {
+    order: 0;
+    background-color: @white;
+  }
+
+  @media (min-width: 940px) {
+    width: 100%;
+    max-width: 432px;
+  }
 }
 
 .form__about-app-legend {
@@ -82,6 +193,7 @@
   font-weight: 400;
   line-height: 18px;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .form__about-app-label {
@@ -95,7 +207,20 @@
 .form__emotion {
   border: none;
   padding: 0;
+  display: flex;
   margin: 0;
+
+  @media (min-width: 660px) {
+    border: 2px solid @grey;
+  }
+}
+
+.form__emotion-position {
+  order: 4;
+
+  @media (min-width: 940px) {
+    width: 100%;
+  }
 }
 
 .form__emotion-legend {
@@ -105,6 +230,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 18px;
+  text-align: center;
 }
 
 .form__emotion-text {
@@ -115,12 +241,43 @@
   line-height: 30px;
 }
 
+.form__btn {
+  order: 5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  @media (min-width: 660px) {
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  @media (min-width: 940px) {
+    width: 100%;
+  }
+}
+
+.main-form__comment {
+  text-align: center;
+  font-size: 14px;
+  padding: 0;
+  margin: 0;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+}
+
+.main-form__comment span {
+  color: @red;
+}
+
 .form__button {
   cursor: pointer;
   color: @white;
   background-color: @green;
   text-transform: uppercase;
-  min-width: 276px;
+  width: 100%;
   text-align: center;
   padding: 23px 45px;
   font-size: 18px;
@@ -129,4 +286,8 @@
   line-height: 30px;
   border-radius: 1px;
   border: 2px solid @green;
+
+  @media (min-width: 660px) {
+    max-width: 296px;
+  }
 }
