--- a/source/less/blocks/main-filter.less
+++ b/source/less/blocks/main-filter.less
@@ -2,6 +2,31 @@
   background-color: @grey;
 }
 
+.main-filter__main-img {
+  width: 100%;
+  min-width: 280px;
+  max-width: 300px;
+  height: 374px;
+
+  @media (min-width: 660px) {
+    height: 400px;
+  }
+}
+
+.main-filter__form {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: 660px) {
+    flex-direction: row;
+  }
+}
+
+.main-filter__flex-box {
+  display: flex;
+  flex-direction: column;
+}
+
 .main-filter__list {
   list-style: none;
   margin: 0;
@@ -9,13 +34,22 @@
 }
 
 .main-filter__button {
-  min-width: 280px;
+  width: 100%;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
   line-height: 18px;
   border-radius: 30px;
   padding: 21px 20px;
+
+  @media (min-width: 660px) {
+    width: 260px;
+  }
+
+  @media (min-width: 940px) {
+    width: 183px;
+    padding: 21px 42px;
+  }
 }
 
 .main-filter__post-button {
