--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,6 +1,6 @@
 .main-nav {
   background-color: @blue;
-  display: none;
+
 
   @media (min-width: 940px) {
     display: flex;
@@ -12,6 +12,8 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  display: flex;
+  flex-direction: column;
 
   @media (min-width: 940px) {
     margin: 0;
@@ -23,6 +25,7 @@
 }
 
 .main-nav__item {
+  width: 100%;
   padding: 24px 0;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
