--- a/source/less/blocks/other-picture.less
+++ b/source/less/blocks/other-picture.less
@@ -1,3 +1,20 @@
+.other-picture {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+
+  @media (min-width: 660px) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.other-picture__user-card {
+  width: 100%;
+  min-width: 280px;
+  max-width: 300px;
+}
+
 .other-picture__user-card-inf {
   background-color: @grey;
 }
