--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -3,37 +3,96 @@
   position: relative;
 
   @media (min-width: 660px) {
-    background-image: url("../../img/hend.png"), url("../../img/back-mobile.jpg");
+    background-image: url("../img/back-mobile.jpg");
     background-repeat: no-repeat;
-    background-size: 660px 545px, cover;
-    background-position: 100% 100%, center center;
+    background-size: cover;
+    background-position: center center;
   }
 }
 
-.page-header__head {
-  background-color: @black;
-  opacity: 0.3;
-  min-height: 66px;
+.page-header__nav {
+  margin: 0;
+  padding: 0;
+}
 
-  @media (min-width: 660px) {
-    min-height: 110px;
-  }
+.page-header__main-nav {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.page-header__item {
+  background-color: @blue;
+  padding: 23px 0;
 
   @media (min-width: 940px) {
-    display: flex;
-    justify-content: space-between;
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 0;
   }
 }
 
-.page-header__head .container {
+.page-header__item .container {
   display: flex;
-  min-height: 66px;
   justify-content: space-between;
+  height: 23px;
+
+  @media (min-width: 940px) {
+    height: 110px;
+  }
+}
+
+.page-header__list-desctop {
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+  min-width: 620px;
+  align-items: center;
+
+  @media (min-width: 320px) and (max-width: 939px) {
+    display: none;
+  }
+}
+
+.page-header__list-nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+  @media (min-width: 940px) {
+    display: none;
+  }
+}
+
+.page-header__list-nav-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 24px 0;
+  background-color: @blue;
+  border: 1px solid;
+  box-shadow: 0px 1px 0px #000000, inset 0px 1px 0px rgba(255, 255, 255, 0.15);
+}
+
+.page-header__link {
+  color: @white;
+  text-decoration-line: none;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px;
+}
+
+.page-header__head-logo {
+  display: flex;
   align-items: center;
 }
 
 .page-header__main-inform {
-  background-image: url("../../img/back-mobile.jpg");
+  background-image: url("../img/back-mobile.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -44,13 +103,19 @@
 }
 
 .page-header__head-toggle {
+  width: 23px;
+  height: 23px;
+  background-color: @blue;
+  border: none;
+  outline: none;
+
   @media (min-width: 940px) {
     display: none;
   }
 }
 
 .page-header__slogan-phone {
-  background-image: url("../../img/hend.png");
+  background-image: url("../img/hend.png");
   background-size: 320px 286px;
   min-height: 396px;
   background-position: left bottom;
@@ -58,7 +123,12 @@
 
   @media (min-width: 660px) {
     min-height: 619px;
-    background-image: none;
+    background-position: 100% 100%;
+    background-size: 660px 545px;
+  }
+
+  @media (min-width: 940px) {
+    height: 743px;
   }
 }
 
@@ -76,12 +146,31 @@
 .page-header__slogan-text {
   margin: 0;
   padding: 36px 0;
+  text-align: center;
+
+  @media (min-width: 660px) {
+    text-align: center;
+    padding: 114px 0 0 0;
+    width: 300px;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 48px;
+  }
+
+  @media (min-width: 940px) {
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 68px;
+  }
 }
 
 .page-header__download-wrap {
   @media (min-width: 660px) {
     position: absolute;
-    top: 378px;
+    top: 678px;
+    width: 100%;
   }
 }
 
