--- a/source/less/style.less
+++ b/source/less/style.less
@@ -18,3 +18,4 @@
 @import "blocks/main-picture.less";
 @import "blocks/other-picture.less";
 @import "blocks/main-filter.less";
+@import "blocks/main-inspire-text.less";
