--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -72,6 +72,19 @@
   }
 }
 
+.form__achievemnts-flex-box {
+  display: flex;
+  margin: 56px 57px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 30px 20px;
+}
+
+.form__achievemnts-flex {
+  display: flex;
+  align-items: center;
+}
+
 .form__achievements-position {
   order: 1;
   background-color: @grey;
