--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -73,8 +73,7 @@
   align-items: center;
   padding: 24px 0;
   background-color: @blue;
-  border: 1px solid;
-  box-shadow: 0px 1px 0px #000000, inset 0px 1px 0px rgba(255, 255, 255, 0.15);
+  border: 1px solid fade(@black, 5%);
 }
 
 .page-header__link {
