--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -5,9 +5,7 @@
   margin: 0 auto;
 
   @media (min-width: 660px) {
-    min-width: 660px;
-    max-width: 939px;
-    width: 100%;
+    width: 660px;
   }
 
   @media (min-width: 940px) {
