--- a/source/less/blocks/fake-inform.less
+++ b/source/less/blocks/fake-inform.less
@@ -40,6 +40,7 @@
 
   @media (min-width: 940px) {
     padding: 101px 0 25px 369px;
+    line-height: 30px;
   }
 }
 
@@ -56,12 +57,13 @@
 
   @media (min-width: 940px) {
     padding-left: 369px;
+    font-size: 18px;
+    line-height: 30px;
   }
 }
 
 .fake-inform__link {
   @media (min-width: 660px) {
-    text-decoration-line: none;
     color: @red;
     font-size: 14px;
     font-style: normal;
@@ -72,5 +74,7 @@
 
   @media (min-width: 940px) {
     padding-left: 369px;
+    font-size: 18px;
+    line-height: 30px;
   }
 }
