--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,18 +1,103 @@
+.footer {
+  min-height: 284px;
+
+  @media (min-width: 660px) {
+    min-height: 127px;
+  }
+}
+
 .footer__developer {
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
   text-decoration: none;
   color: @blue;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.footer__html {
+  fill: @red;
+
+  &:hover {
+    fill: @blue;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .footer__flex-box {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  padding-top: 40px;
 
   @media (min-width: 320px) and (max-width: 659px) {
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
+
+  @media (min-width: 660px) {
+    justify-content: space-between;
+    padding: 20px 0;
+  }
+}
+
+.footer__list {
+  list-style: none;
+  margin: 41px 0;
+  display: flex;
+  justify-content: space-between;
+  gap: 14px;
+  padding: 0;
+}
+
+.footer__item {
+  width: 48px;
+  height: 48px;
+}
+
+.footer__link-twitter {
+  width: 48px;
+  height: 48px;
+  border: 3px solid fade(@blue, 10%);
+  border-radius: 40px;
+  display: block;
+  background-image: url("../../img/twitter.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.footer__link-facebook {
+  width: 48px;
+  height: 48px;
+  border: 3px solid fade(@blue, 10%);
+  border-radius: 40px;
+  display: block;
+  background-image: url("../../img/facebook.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.footer__link-youtube {
+  width: 48px;
+  height: 48px;
+  border: 3px solid fade(@blue, 10%);
+  border-radius: 40px;
+  display: block;
+  background-image: url("../../img/youtube.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.footer__item a:hover {
+  border: 3px solid @blue;
+}
+
+.footer__item a:active {
+  opacity: 0.1;
 }
