--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -1,12 +1,18 @@
 .price {
   background-color: @white;
-  background-image: url("../../img/grey-back.png");
+  background-image: url("../../img/grey-background.svg");
   background-repeat: no-repeat;
-  background-position: 0 5%;
-  background-size: cover;
+  background-position: 50% 0;
+  background-size: 1214px 506px;
   overflow-x: hidden;
   position: relative;
   min-height: 534px;
+
+  @media (min-width: 940px) {
+    min-height: 534px;
+    background-position: bottom;
+    background-size: 1200px 534px;
+  }
 }
 
 .price__wraper {
@@ -14,7 +20,7 @@
   flex-direction: column;
   max-width: 940px;
   margin: 0 auto;
-  margin-top: 154px;
+  margin-top: 102px;
 
   @media (min-width: 660px) and (max-width: 939px) {
     max-width: 660px;
@@ -25,6 +31,12 @@
     width: 840px;
     overflow-x: hidden;
     transform: translateX(-258px);
+  }
+}
+
+.price__wraper .reviews__toggle-btn {
+  @media (min-width: 660px) {
+    display: none;
   }
 }
 
@@ -95,7 +107,7 @@
   border-collapse: collapse;
   border: 1px solid @grey;
   background-color: @white;
-  padding-left: 20px;
+
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -108,12 +120,21 @@
 }
 
 .price__option-check {
-  margin-left: 81px;
+  float: right;
+  margin-right: 17px;
+  display: inline-block;
   margin-top: 5px;
 
   @media (min-width: 660px) and (max-width: 939px) {
-    margin-left: 45px;
+    margin-left: 68px;
     margin-top: 10px;
+    margin-right: 0;
+    float: none;
+  }
+
+  @media (min-width: 940px) {
+    float: none;
+    margin-left: 100px;
   }
 }
 
@@ -121,6 +142,11 @@
   display: none;
 
   @media (min-width: 320px) and (max-width: 659px) {
-    display: block;
+    display: inline-block;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    padding-left: 20px;
   }
 }
