--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -1,17 +1,22 @@
 .price {
   background-color: @white;
-  background-image: url("../../img/grey-background.svg");
+  background-image: url("../img/grey-background.svg");
   background-repeat: no-repeat;
-  background-position: 50% 0;
+  background-position: 50% -25px;
   background-size: 1214px 506px;
   overflow-x: hidden;
   position: relative;
-  min-height: 534px;
+  min-height: 480px;
+
+  @media (min-width: 660px) {
+    background-size: 1200px 534px;
+    background-position: 0 20%;
+    min-height: 384px;
+  }
 
   @media (min-width: 940px) {
     min-height: 534px;
     background-position: bottom;
-    background-size: 1200px 534px;
   }
 }
 
@@ -20,15 +25,18 @@
   flex-direction: column;
   max-width: 940px;
   margin: 0 auto;
-  margin-top: 102px;
+  margin-top: 145px;
 
   @media (min-width: 660px) and (max-width: 939px) {
     max-width: 660px;
+    margin-top: 98px;
+    padding: 0 20px;
   }
 
   @media (min-width: 320px) and (max-width: 659px) {
     position: absolute;
     width: 840px;
+    margin-top: 100px;
     overflow-x: hidden;
     transform: translateX(-258px);
   }
@@ -42,6 +50,16 @@
 
 .price__table {
   table-layout: auto;
+
+  @media (min-width: 660px) {
+    border-collapse: collapse;
+  }
+}
+
+.price__table-header {
+  @media (min-width: 660px) {
+    border-collapse: inherit;
+  }
 }
 
 .price__head {
@@ -55,11 +73,13 @@
 
   @media (min-width: 660px) and (max-width: 939px) {
     width: 152px;
+    height: 75px;
+    padding: 10px 0;
   }
 }
 
 .price__option-text {
-  padding-left: 20px;
+  padding-left: 13px;
 
   @media (min-width: 320px) and (max-width: 659px) {
     display: none;
@@ -79,6 +99,15 @@
   line-height: 30px;
   padding: 8px 0 18px 0;
   margin: 0;
+
+  @media (min-width: 660px) {
+    padding: 0;
+    font-size: 18px;
+  }
+
+  @media (min-width: 320px) {
+    font-size: 18px;
+  }
 }
 
 .price__head:first-child {
@@ -98,6 +127,15 @@
   font-style: normal;
   font-weight: 700;
   line-height: 30px;
+
+  @media (min-width: 600px) {
+    padding: 2px 0;
+    font-size: 16px;
+  }
+
+  @media (min-width: 320px) {
+    font-size: 16px;
+  }
 }
 
 .price__option {
@@ -107,7 +145,6 @@
   border-collapse: collapse;
   border: 1px solid @grey;
   background-color: @white;
-
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -116,6 +153,8 @@
   @media (min-width: 660px) and (max-width: 939px) {
     width: 152px;
     font-size: 14px;
+    height: 43px;
+    border: 2px solid @dark-grey;
   }
 }
 
@@ -126,8 +165,8 @@
   margin-top: 5px;
 
   @media (min-width: 660px) and (max-width: 939px) {
-    margin-left: 68px;
-    margin-top: 10px;
+    margin-left: 61px;
+    margin-top: 4px;
     margin-right: 0;
     float: none;
   }
@@ -145,8 +184,16 @@
     display: inline-block;
     font-size: 14px;
     font-style: normal;
+    text-transform: uppercase;
     font-weight: 400;
     line-height: 30px;
     padding-left: 20px;
+  }
+}
+
+.price__hit img {
+  @media (min-width: 660px) and (max-width: 939px) {
+    width: 61px;
+    height: 61px;
   }
 }
