--- a/source/less/blocks/benefits.less
+++ b/source/less/blocks/benefits.less
@@ -8,10 +8,12 @@
 
 
   @media (min-width: 660px) {
-    background-position: 0 30px, 0 -80px;
+    background-position: 19px 9px, 0 -80px;
     background-size: 269px 547px, cover;
     overflow-x: hidden;
-    min-height: auto;
+    overflow-y: hidden;
+    min-height: 487px;
+    max-height: 487px;
   }
 
   @media (min-width: 940px) {
@@ -23,9 +25,22 @@
   }
 }
 
+.benefits {
+  @media (min-width: 660px) and (max-width: 939px){
+    margin-top: 83px;
+  }
+}
+
 .benefits__intro {
   background-color: @white;
-  margin: 46px 0 38px 0;
+
+  @media (min-width: 660px) {
+    margin: 128px 0 28px 0;
+  }
+
+  @media (min-width: 940px) {
+    margin: 60px 0 72px 0;
+  }
 }
 
 .benefits__phone {
@@ -39,7 +54,7 @@
 
 .benefits__intro-text {
   padding: 0;
-  margin: 0;
+  margin: 43px 0 0 0;
   text-align: center;
   font-weight: 300;
   font-size: 24px;
@@ -51,6 +66,14 @@
     font-style: normal;
     font-weight: 300;
     line-height: 54px;
+    margin: 0;
+  }
+
+  @media (min-width: 940px){
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 68px;
   }
 }
 
@@ -58,16 +81,18 @@
   list-style: none;
   display: flex;
   flex-direction: column;
-  padding-top: 86px;
+  padding: 86px 0 0 0;
 
   @media (min-width: 660px) {
     padding-left: 310px;
+    padding-top: 62px;
   }
 
   @media (min-width: 940px) {
     flex-direction: row;
     justify-content: space-between;
     padding: 0;
+    margin: 0;
   }
 }
 
@@ -93,7 +118,6 @@
   line-height: 24px;
   text-align: center;
   margin: 0;
-  height: 14px;
 
   @media (min-width: 660px) {
     text-align: left;
@@ -114,17 +138,18 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
-  margin: 24px 0 43px 0;
+  margin: 17px 0 32px 0;
   min-width: 280px;
   height: 58px;
 
   @media (min-width: 660px) {
     text-align: left;
+    margin: 14px 0 41px 0;
   }
 
   @media (min-width: 940px) {
     text-align: center;
-    padding: 35px 20px 59px;
+    max-width: 252px;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
