--- a/source/less/blocks/fake-inform.less
+++ b/source/less/blocks/fake-inform.less
@@ -14,15 +14,16 @@
 .fake-inform__news {
   @media (min-width: 660px) {
     display: block;
-    background-image: url("../../img/clock.png");
+    background-image: url("../img/clock.png");
     background-repeat: no-repeat;
-    background-position: left;
+    background-position: 0 56px;
     min-height: 330px;
     background-size: 238px 276px;
   }
 
   @media (min-width: 940px) {
     background-size: 298px 345px;
+    background-position: left top;
     min-height: 429px;
     background-color: @grey;
   }
@@ -30,7 +31,7 @@
 
 .fake-inform__heading {
   @media (min-width: 660px) {
-    padding: 101px 0 25px 310px;
+    padding: 101px 0 0 310px;
     font-size: 30px;
     font-style: normal;
     font-weight: 700;
@@ -44,6 +45,12 @@
   }
 }
 
+.fake-inform__heading br {
+  @media (min-width: 940px) {
+    display: none;
+  }
+}
+
 .fake-inform__text {
   @media (min-width: 660px) {
     font-size: 14px;
@@ -51,8 +58,8 @@
     font-weight: 400;
     line-height: 24px;
     padding-left: 310px;
-    padding-bottom: 25px;
-    padding-right: 20px;
+    margin: 0 0 10px 0;
+    padding-top: 8px;
   }
 
   @media (min-width: 940px) {
