--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,9 +1,10 @@
 .page-header {
   @media (min-width: 940px) {
-    background-image: url("../../img/back-desktop.jpg");
-    background-repeat: no-repeat;
+    background-image: url("../img/back-desktop.jpg");
     background-size: cover;
-    background-position: center center;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 853px;
   }
 }
 
@@ -15,86 +16,126 @@
   }
 }
 
-.page-header__logo {
-  margin-left: 20px;
-  width: 74px;
-  height: 23px;
-  background-image: url("../../img/pink.svg");
-  background-repeat: no-repeat;
+.page-header__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: 940px) {
+    flex-direction: row;
+    min-height: 110px;
+    justify-content: space-between;
+    max-width: 940px;
+    margin: 0 auto;
+  }
+}
+
+.page-header__top-line-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 69px;
+  border-bottom: 1px solid @black;
+  min-width: 320px;
+  max-width: 659px;
+  padding: 0 20px;
 
   @media (min-width: 660px) {
-    background-image: url("../../img/logotype-white-tablet.svg");
-    width: 145px;
-    height: 40px;
+    min-width: 660px;
+    max-width: 940px;
+    min-height: 109px;
   }
 
   @media (min-width: 940px) {
+    max-width: 147px;
+    min-width: 146px;
+    display: block;
+    padding: 27px 0 0;
+    min-height: 110px;
     margin: 0;
+    border: none;
   }
 }
 
-.page-header__logo:hover {
-  background-image: url("../../img/pink-mob-hover.png");
+.page-header__logo {
+  width: 74px;
+  height: 23px;
+  display: block;
+  background-image: url("../img/pink.svg");
+  background-repeat: no-repeat;
+
+  &:hover {
+    background-image: url("../img/pink-hover.svg");
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 
   @media (min-width: 660px) {
-    background-image: url("../../img/logo-hover.png");
+    background-image: url("../img/logotype-white-tablet.svg");
+    width: 145px;
+    height: 40px;
+    margin-bottom: 15px;;
+
+    &:hover {
+      background-image: url("../img/logo-hover-tablet.svg");
+    }
+
+    &:active {
+      background-image: url("../img/logo-active-tablet.svg");
+    }
+  }
+
+  @media (min-width: 940px) {
+    background-image: url("../img/logo-desktop.svg");
+    width: 147px;
   }
 }
 
-.page-header__logo:active {
-  background-image: url("../../img/pink-mob-active.png");
-
-  @media (min-width: 660px) {
-    background-image: url("../../img/logo-active.png");
-  }
-}
-
-.page-header__btn {
+.page-header__toggle-btn {
   position: relative;
-  margin-right: 20px;
-  background-color: @blue;
   width: 23px;
   height: 23px;
-  border: none;
+  padding: 0;
   cursor: pointer;
+  background-color: @blue;
+  border: none;
   outline: none;
 
   &::before {
     content: "";
-    width: 3px;
-    height: 23px;
-    top: 0;
-    left: 10px;
     position: absolute;
+    width: 2px;
+    height: 30px;
     background-color: @white;
+    top: -3px;
+    left: 10px;
     transform: rotate(45deg);
   }
 
   &::after {
     content: "";
-    width: 3px;
-    height: 23px;
-    top: 0;
-    left: 10px;
     position: absolute;
+    width: 2px;
+    height: 30px;
     background-color: @white;
+    top: -3px;
+    left: 10px;
     transform: rotate(-45deg);
   }
 
-  &:hover::before {
-    background-color: @red;
-  }
-
+  &:hover::before,
   &:hover::after {
     background-color: @red;
   }
 
-  &:active::before {
-    opacity: 30%;
-  }
-
+  &:active::before,
   &:active::after {
-    opacity: 30%;
+    opacity: 0.3;
+    background-color: @white;
   }
 
   @media (min-width: 940px) {
@@ -102,246 +143,237 @@
   }
 }
 
-.page-header__top-line {
+.page-header__list-flex {
   @media (min-width: 940px) {
-    display: flex;
-    justify-content: space-around;
-    min-height: 110px;
-    align-items: center;
-  }
-}
-
-.page-header__flex-box {
-  display: flex;
-  justify-content: space-between;
-  min-height: 69px;
-  align-items: center;
-  border-bottom: 1px solid @black;
-
-  @media (min-width: 660px) {
-    min-height: 109px;
-  }
-
-  @media (min-width: 940px) {
-    border: none;
-    min-height: 110px;
-  }
-}
-
-.page-header__list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-
-  @media (min-width: 940px) {
-    flex-direction: row;
-    padding: 15px 0 0 0;
-    gap: 78px;
-    justify-content: space-between;
+    width: 620px;
   }
 }
 
 .page-header__item {
-  min-height: 63px;
-  display: flex;
-  border-top: 1px solid fade(@black, 20%);
+  min-height: 64px;
+  border-top: 1px solid fade(@white, 15%);
   border-bottom: 1px solid @black;
-  justify-content: center;
+  min-width: 320px;
+  max-width: 659px;
+  display: flex;
   align-items: center;
+  justify-content: center;
+
+  @media (min-width: 660px) {
+    min-width: 660px;
+    max-width: 939px;
+  }
 
   @media (min-width: 940px) {
+    min-width: auto;
     border: none;
+    display: block;
+    padding-top: 48px;
   }
 }
 
 .page-header__link {
-  color: @white;
   text-decoration: none;
-  text-transform: uppercase;
+  color: @white;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
   line-height: 32px;
-}
+  text-transform: uppercase;
 
-.page-header__link:hover {
-  color: @red;
-}
+  &:hover {
+    color: @red;
+  }
 
-.page-header__link:active {
-  color: @white;
-  opacity: 30%;
-}
-
-.page-header__slogan {
-  min-height: 396px;
-  background-image: url("../../img/back-mobile.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 0 -70px;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-
-  @media (min-width: 660px) {
-    background-image: url("../../img/hend-tablet.png"), url("../../img/back-tablet.jpg");
-    background-size: 660px 545px, cover;
-    background-position: 100% 100%, center;
-    min-height: 619px;
+  &:active {
+    opacity: 0.3;
   }
 
   @media (min-width: 940px) {
-    background-image: url("../../img/hend-desktop.png");
-    background-position: 100% 100%;
-    background-size: 1050px 645px;
-    min-height: 744px;
+    display: block;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    text-transform: none;
   }
 }
 
-.page-header__background {
-  background-image: url("../../img/hend.png");
-  background-size: 320px 286px;
+.page-header__slogan {
+  background-image: url("../img/back-mobile.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   min-height: 396px;
+
+  @media (min-width: 660px) {
+    background-image: url("../img/back-tablet.jpg");
+    min-height: 619px;
+    background-position: 0 -110px;
+  }
+
+  @media (min-width: 940px) {
+    background-image: none;
+    min-height: 743px;
+  }
+}
+
+.page-header__slogan-wraper {
+  min-height: 396px;
+  background-image: url("../img/hend.png");
   background-repeat: no-repeat;
   background-position: left bottom;
 
+
   @media (min-width: 660px) {
-    position: absolute;
-    min-width: 300px;
-    background-image: none;
     min-height: 619px;
+    background-image: url("../img/hend-tablet.png");
+    background-position: -20px 74px;
+  }
+
+  @media (min-width: 940px) {
+    min-height: 743px;
+    background-image: url("../img/hend-desktop.png");
+    background-position: 18px 100%;
   }
 }
 
 .page-header__heading {
+  margin: 0;
   font-size: 24px;
   font-style: normal;
   font-weight: 300;
   line-height: 29px;
   text-align: center;
   color: @white;
-  padding: 20px 60px 0;
-  margin: 0;
+  padding: 22px 0 0 0;
 
   @media (min-width: 660px) {
+    padding: 93px 0 0 0;
     font-size: 40px;
+    width: 300px;
     font-style: normal;
     font-weight: 300;
     line-height: 48px;
-    width: 300px;
-    padding: 102px 20px 0 20px;
-    margin-left: 20px;
   }
 
   @media (min-width: 940px) {
     font-size: 50px;
-    font-style: normal;
-    font-weight: 300;
     line-height: 68px;
-    padding: 114px 20px 0;
+    padding: 100px 0 0 0;
+  }
+}
+
+.page-header__download-app {
+  min-height: 271px;
+  background-color: @blue;
+  padding-top: 28px;
+
+  @media (min-width: 660px) {
+    margin-top: -352px;
+    background-color: transparent;
+    padding-top: 0;
   }
 
-  @media (min-width: 1200px) {
-    padding-left: 160px;
-    width: 400px;
+  @media (min-width: 940px) {
+    margin-top: -404px;
   }
 }
 
 .page-header__link-btn {
+  min-width: 280px;
+  max-width: 300px;
+  border: 3px solid fade(@white, 20%);
+  display: block;
+  border-radius: 29px;
+  padding: 15.5px 0;
+  text-align: center;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
   line-height: 18px;
-  text-align: center;
+  background-color: @blue;
+  color: white;
   text-decoration: none;
-  color: @white;
-  min-width: 280px;
-  max-width: 300px;
-  border: 3px solid @white;
-  border-radius: 29px;
-  display: block;
-  margin-top: 25px;
-  padding: 17px 0;
 
   &:hover {
-    color: @red;
     background-color: @white;
+    color: @red;
   }
 
   &:active {
     opacity: 0.3;
-    background-color: @white;
+  }
+
+  @media (min-width: 660px) {
+    border: 3px solid white;
+    background-color: transparent;
+  }
+
+  @media (min-width: 940px) {
+    font-size: 21px;
   }
 }
 
 .page-header__list-app {
   list-style: none;
+  margin: 32px 0 20px;
   padding: 0;
-  margin: 32px 0 0 0;
   display: flex;
   align-items: center;
-  gap: 35px;
-}
-
-.page-header__iphone {
-  background-image: url("../../img/apple-logo.svg");
-  background-repeat: no-repeat;
-  width: 47px;
-  height: 56px;
-  display: block;
-}
-
-.page-header__android {
-  background-image: url("../../img/android-logo.svg");
-  background-repeat: no-repeat;
-  width: 43px;
-  height: 47px;
-  display: block;
-}
-
-.page-header__windows {
-  background-image: url("../../img/microsoft-logo.svg");
-  background-repeat: no-repeat;
-  width: 44px;
-  height: 41px;
-  display: block;
-}
-
-.page-header__download-app {
-  background-color: @blue;
-  display: flex;
-  flex-direction: column;
-  z-index: 1;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
 
   @media (min-width: 660px) {
-    background-color: transparent;
     width: 300px;
-    margin: 254px 20px 0;
+    margin: 46px 0 38px;
   }
 
   @media (min-width: 940px) {
-    margin: 313px 20px 0;
-  }
-
-  @media (min-width: 1200px) {
-    margin: 313px 140px 0;
+    margin: 67px 0 54px;
   }
 }
 
+.page-header__iphone {
+  width: 47px;
+  height: 56px;
+  display: block;
+  background-image: url("../img/apple-logo.svg");
+  background-repeat: no-repeat;
+}
+
+.page-header__android {
+  width: 43px;
+  height: 47px;
+  display: block;
+  background-image: url("../img/android-logo.svg");
+  background-repeat: no-repeat;
+}
+
+.page-header__windows {
+  width: 44px;
+  height: 41px;
+  display: block;
+  background-image: url("../img/microsoft-logo.svg");
+  background-repeat: no-repeat;
+}
+
 .page-header__text {
-  margin: 22px 0 32px 0;
-  padding: 0 20px;
+  margin: 0;
+  padding: 0;
   text-align: center;
   font-size: 14px;
   font-style: normal;
   font-weight: 300;
   line-height: 24px;
-  color: @white;
   opacity: 0.34;
+  color: @white;
+
+  @media (min-width: 660px) {
+    width: 300px;
+    font-size: 18px;
+    line-height: 24px;
+
+  }
 }
 
 /* form.html */
