--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -78,7 +78,7 @@
     background-image: url("../img/logotype-white-tablet.svg");
     width: 145px;
     height: 40px;
-    margin-bottom: 15px;;
+    margin-bottom: 15px;
 
     &:hover {
       background-image: url("../img/logo-hover-tablet.svg");
@@ -372,7 +372,6 @@
     width: 300px;
     font-size: 18px;
     line-height: 24px;
-
   }
 }
 
