--- a/source/less/blocks/fake-inform.less
+++ b/source/less/blocks/fake-inform.less
@@ -23,7 +23,7 @@
 
   @media (min-width: 940px) {
     background-size: 298px 345px;
-    background-position: left top;
+    background-position: 0 6px;
     min-height: 429px;
     background-color: @grey;
   }
@@ -66,6 +66,7 @@
     padding-left: 369px;
     font-size: 18px;
     line-height: 30px;
+    padding-top: 0;
   }
 }
 
@@ -83,5 +84,7 @@
     padding-left: 369px;
     font-size: 18px;
     line-height: 30px;
+    display: block;
+    margin: 31px 0 0 0;
   }
 }
