--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -148,6 +148,7 @@
   @media (min-width: 940px) {
     height: 123px;
     background-image: url("../img/triangle-white-desctop.png");
+    background-size: 100% 100%;
   }
 }
 
