--- a/source/less/blocks/benefits.less
+++ b/source/less/blocks/benefits.less
@@ -48,13 +48,12 @@
 
   @media (min-width: 940px) {
     display: block;
-    margin: 0 0 59px 0;
   }
 }
 
 .benefits__intro-text {
   padding: 0;
-  margin: 43px 0 0 0;
+  margin: 38px 0 0 0;
   text-align: center;
   font-weight: 300;
   font-size: 24px;
@@ -81,11 +80,13 @@
   list-style: none;
   display: flex;
   flex-direction: column;
-  padding: 86px 0 0 0;
+  padding: 82px 0 0 0;
+  margin: 32px 0 0 0;
 
   @media (min-width: 660px) {
     padding-left: 310px;
     padding-top: 62px;
+    margin: 0;
   }
 
   @media (min-width: 940px) {
@@ -97,8 +98,14 @@
 }
 
 .benefits__item {
+  margin-bottom: 43px;
+
+  @media (min-width: 660px) {
+    margin-bottom: 32px;
+  }
+
   @media (min-width: 940px) {
-    min-width: 252px;
+    margin-top: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -117,14 +124,16 @@
   font-weight: 700;
   line-height: 24px;
   text-align: center;
-  margin: 0;
+  margin: 0 0 14px 0;
 
   @media (min-width: 660px) {
     text-align: left;
+    margin: 16px 0 0 0;
   }
 
   @media (min-width: 940px) {
     text-align: center;
+    margin: 42px 0 0 0;
     font-size: 30px;
     font-style: normal;
     font-weight: 700;
@@ -138,18 +147,20 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
-  margin: 17px 0 32px 0;
+  margin: 0;
   min-width: 280px;
   height: 58px;
 
   @media (min-width: 660px) {
     text-align: left;
-    margin: 14px 0 41px 0;
+    margin: 12px 0 0 0;
   }
 
   @media (min-width: 940px) {
     text-align: center;
+    margin: 21px 0 0 0;
     max-width: 252px;
+    min-width: 250px;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
