--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -48,6 +48,9 @@
   @media (min-width: 660px) {
     justify-content: space-between;
     padding: 0;
+    min-height: 127px;
+    padding: 0 0 20px 0;
+    align-items: center;
   }
 }
 
@@ -60,7 +63,7 @@
   padding: 0;
 
   @media (min-width: 660px) {
-    margin: 29px 0 38px 0;
+    margin: 3px 16px 0 0px;
   }
 
   @media (min-width: 940px) {
