--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -16,7 +16,8 @@
 
   @media (min-width: 940px) {
     min-height: 534px;
-    background-position: bottom;
+    background-size: cover, 534px;
+    background-position: 0 7%;
   }
 }
 
@@ -93,25 +94,28 @@
 }
 
 .price__text {
-  font-size: 24px;
   font-style: normal;
   font-weight: 300;
   line-height: 30px;
   padding: 8px 0 18px 0;
   margin: 0;
 
+  @media (min-width: 320px) {
+    font-size: 18px;
+  }
+
   @media (min-width: 660px) {
     padding: 0;
     font-size: 18px;
   }
 
-  @media (min-width: 320px) {
-    font-size: 18px;
+  @media (min-width: 940px) {
+      font-size: 24px;
   }
 }
 
 .price__head:first-child {
-  background-color: @grey;
+  background-color: transparent;
 }
 
 .price__hit {
