--- a/source/less/style.less
+++ b/source/less/style.less
@@ -19,3 +19,5 @@
 @import "blocks/other-picture.less";
 @import "blocks/main-filter.less";
 @import "blocks/main-inspire-text.less";
+@import "blocks/send-popup.less";
+@import "blocks/oops-popup.less";
