--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -377,12 +377,251 @@
 
 /* form.html */
 
-.page-header__intro-heading {
+.page-header-form {
+  @media (min-width: 940px) {
+    background-image: url("../img/back-desktop.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    min-height: 394px;
+  }
+}
+
+.page-header-form__nav {
+  background-color: @blue;
+
+  @media (min-width: 940px) {
+    background-color: fade(@black, 30%);
+  }
+}
+
+.page-header-form__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: 940px) {
+    flex-direction: row;
+    min-height: 110px;
+    justify-content: space-between;
+    max-width: 940px;
+    margin: 0 auto;
+  }
+}
+
+.page-header-form__top-line-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 69px;
+  border-bottom: 1px solid @black;
+  min-width: 320px;
+  max-width: 659px;
+  padding: 0 20px;
+
+  @media (min-width: 660px) {
+    min-width: 660px;
+    max-width: 940px;
+    min-height: 109px;
+  }
+
+  @media (min-width: 940px) {
+    max-width: 147px;
+    min-width: 146px;
+    display: block;
+    padding: 27px 0 0;
+    min-height: 110px;
+    margin: 0;
+    border: none;
+  }
+}
+
+.page-header-form__logo {
+  width: 74px;
+  height: 23px;
+  display: block;
+  background-image: url("../img/pink.svg");
+  background-repeat: no-repeat;
+
+  &:hover {
+    background-image: url("../img/pink-hover.svg");
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
+  @media (min-width: 660px) {
+    background-image: url("../img/logotype-white-tablet.svg");
+    width: 145px;
+    height: 40px;
+    margin-bottom: 15px;
+
+    &:hover {
+      background-image: url("../img/logo-hover-tablet.svg");
+    }
+
+    &:active {
+      background-image: url("../img/logo-active-tablet.svg");
+    }
+  }
+
+  @media (min-width: 940px) {
+    background-image: url("../img/logo-desktop.svg");
+    width: 147px;
+  }
+}
+
+.page-header-form__toggle-btn {
+  position: relative;
+  width: 23px;
+  height: 23px;
+  padding: 0;
+  cursor: pointer;
+  background-color: @blue;
+  border: none;
+  outline: none;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 2px;
+    height: 30px;
+    background-color: @white;
+    top: -3px;
+    left: 10px;
+    transform: rotate(45deg);
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 2px;
+    height: 30px;
+    background-color: @white;
+    top: -3px;
+    left: 10px;
+    transform: rotate(-45deg);
+  }
+
+  &:hover::before,
+  &:hover::after {
+    background-color: @red;
+  }
+
+  &:active::before,
+  &:active::after {
+    opacity: 0.3;
+    background-color: @white;
+  }
+
+  @media (min-width: 940px) {
+    display: none;
+  }
+}
+
+.page-header-form__list-flex {
+  @media (min-width: 940px) {
+    width: 620px;
+  }
+}
+
+.page-header-form__item {
+  min-height: 64px;
+  border-top: 1px solid fade(@white, 15%);
+  border-bottom: 1px solid @black;
+  min-width: 320px;
+  max-width: 659px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  @media (min-width: 660px) {
+    min-width: 660px;
+    max-width: 939px;
+  }
+
+  @media (min-width: 940px) {
+    min-width: auto;
+    border: none;
+    display: block;
+    padding-top: 45px;
+  }
+}
+
+.page-header-form__item--active {
+  @media (min-width: 940px) {
+    border-bottom: 2px solid @white;
+  }
+}
+
+.page-header-form__link {
+  text-decoration: none;
+  color: @white;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px;
+  text-transform: uppercase;
+
+  &:hover {
+    color: @red;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
+  @media (min-width: 940px) {
+    display: block;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    text-transform: none;
+    padding-bottom: 10px;
+  }
+}
+
+.page-header-form__form-heading {
+  background-image: url("../img/back-mobile.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 23%;
+
+  @media (min-width: 660px) {
+    background-image: url("../img/back-tablet.jpg");
+    background-position: 0 27%;
+  }
+
+  @media (min-width: 940px) {
+    background-image: none;
+  }
+}
+
+.page-header-form__form-main-heading {
   font-size: 24px;
+  color: @white;
+  font-style: normal;
   font-weight: 300;
   line-height: 33px;
-  color: @white;
-  margin: 0;
-  padding: 36px 0 51px 0;
   text-align: center;
+  padding: 29px 0 44px 0;
+  margin: 0;
+
+  @media (min-width: 660px) {
+    padding: 67px 0 60px;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 68px;
+    margin: 0;
+    text-align: center;
+  }
+
+  @media (min-width: 940px) {
+    padding: 60px 0;
+  }
 }
